# Donuts

./: .coveragerc  .editorconfig  .envrc  .gitignore  .landscape.yml  .rcfile  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  ah_bootstrap.py  appveyor.yml  donuts.py  donuts_version.py  ez_setup.py  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  rdt-requirements.txt  requirements.txt  rtd-requirements.txt
docs/donuts/: advanced.rst  api.rst  install.rst  overview.rst  usage.rst  user_guide.rst
donuts/: __init__.py  conftest.py  donuts.py  image.py
donuts/data/: J17490840-001.fit  J17490840-002.fit  J17490840-003.fit
donuts/tests/: helpers.py  synthetic_data.py  test_choosing_image_class.py  test_donuts_with_synthetic_data.py  test_image.py  test_integration.py  test_integration2.py  test_read_image.py  test_summary.py  test_synthetic_data.py
notebooks/: image_geometry_rework.ipynb  inspect_calibration_runs.ipynb  test_new_image_geometry_code.py  testing_masked_arrays.ipynb
tutorials/.ipynb_checkpoints/: UsingDonutsHooks-checkpoint.ipynb
