[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = donuts
description = Astropy affiliated package
long_description = This is a package for doing aligning defocused images
author = James McCormac
author_email = jmccormac001@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy

[entry_points]
#astropy-package-template-example = packagename.example_mod:main
